k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: node-registry
  labels:
    name: node-registry
